...
                                android:layout_marginStart="16dp"
                                android:layout_marginLeft="16dp"
                                android:background="@color/applozic_transparent_color"
                                android:src="@drawable/smiley" />

                            <ImageButton
                                android:id="@+id/camera_btn"
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:layout_marginStart="16dp"
                                android:layout_marginLeft="16dp"
                                android:background="@color/applozic_transparent_color"
                                android:src="@drawable/icon_camera" />



                            <ImageButton
                                android:id="@+id/location_btn"
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:layout_marginStart="16dp"
                                android:layout_marginLeft="16dp"
                                android:background="@color/applozic_transparent_color"
                                android:src="@drawable/icon_location" />
...
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="23dp"
                        android:layout_marginLeft="23dp" />

                    <io.kommunicate.ui.kommunicate.views.KmRecordButton
                        android:id="@+id/audio_record_button"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_gravity="end"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="10dp"
...
